objects/maps__DebugLog__c.object
<CustomObject>
    <fields>
        <fullName>maps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maps Auto-Assignment Logs</relationshipLabel>
        <relationshipName>AccountAutoAssignmentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteTemplateUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Advanced Route template user the error is related to</description>
        <label>Maps Advanced Route Template User</label>
        <referenceTo>maps__AdvRouteTemplateUser__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Debugs</relationshipLabel>
        <relationshipName>AdvRouteDebugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Advanced Route template the error is related to</description>
        <label>Maps Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Debugs</relationshipLabel>
        <relationshipName>AdvRouteDebugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ErrorBody__c</fullName>
        <description>This holds information about the error and hopefully some way of identifying where the error occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ErrorMessages__c</fullName>
        <description>This will hold messages returned from the routing services</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Error__c</fullName>
        <description>This is the main error mesage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__GeocodeSuccessful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geocode Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Maps Auto-Assignment Logs</relationshipLabel>
        <relationshipName>LeadAutoAssignmentLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Plan</label>
        <referenceTo>maps__AssignmentPlan__c</referenceTo>
        <relationshipLabel>Maps Auto-Assignment Logs</relationshipLabel>
        <relationshipName>PlanLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__ProcessingDate__c</fullName>
        <description>This is the date that was processing for the template user when the error occurred</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__RecordId__c</fullName>
        <description>This is the id of a related record that could help in resolving the error</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__RequestParameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__RoutingJobId__c</fullName>
        <description>This is the routing job id that is related to the route that was processing when the error occurred</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Maps Auto-Assignment Logs</relationshipLabel>
        <relationshipName>RuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Severity__c</fullName>
        <description>This tells us how critical the error is</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FATAL</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>MESSAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geocode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user associated with the error</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdvRouteDebugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Debug Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>